--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="shortcut icon" href="images/mainlogo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="100">
     <!-- Navbar section -->   
@@ -143,22 +144,202 @@
             <!--Service Area Start-->
             <div class="tab-content" id="myTabContent">
               <div class="tab-pane fade active show p-5" id="spa" role="tabpanel">
-                <h2>Kit : 75</h2>
-                <h2>Player Roll : </h2>
-                <h2>Average :</h2>
-                <h2>Height :</h2>
+                <div class="relative overflow-x-auto">
+                  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                      <thead class="text-xs text-gray-900 uppercase dark:text-black-400">
+                          <tr>
+                              <th scope="col" class="px-6 py-3">
+                                  Product name
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Color
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Category
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Price
+                              </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Apple MacBook Pro 17"
+                              </th>
+                              <td class="px-6 py-4">
+                                  Silver
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop
+                              </td>
+                              <td class="px-6 py-4">
+                                  $2999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Microsoft Surface Pro
+                              </th>
+                              <td class="px-6 py-4">
+                                  White
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop PC
+                              </td>
+                              <td class="px-6 py-4">
+                                  $1999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Magic Mouse 2
+                              </th>
+                              <td class="px-6 py-4">
+                                  Black
+                              </td>
+                              <td class="px-6 py-4">
+                                  Accessories
+                              </td>
+                              <td class="px-6 py-4">
+                                  $99
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
               </div>
               <div class="tab-pane fade p-5" id="restaurent" role="tabpanel">
-                <h2>Kit : 75</h2>
-                <h2>Player Roll : </h2>
-                <h2>Average :</h2>
-                <h2>Height :</h2>
+                <div class="relative overflow-x-auto">
+                  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                      <thead class="text-xs text-gray-900 uppercase dark:text-black-400">
+                          <tr>
+                              <th scope="col" class="px-6 py-3">
+                                  Product name
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Color
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Category
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Price
+                              </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Apple MacBook Pro 17"
+                              </th>
+                              <td class="px-6 py-4">
+                                  Silver
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop
+                              </td>
+                              <td class="px-6 py-4">
+                                  $2999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Microsoft Surface Pro
+                              </th>
+                              <td class="px-6 py-4">
+                                  White
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop PC
+                              </td>
+                              <td class="px-6 py-4">
+                                  $1999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Magic Mouse 2
+                              </th>
+                              <td class="px-6 py-4">
+                                  Black
+                              </td>
+                              <td class="px-6 py-4">
+                                  Accessories
+                              </td>
+                              <td class="px-6 py-4">
+                                  $99
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
               </div>
               <div class="tab-pane fade p-5" id="swimming" role="tabpanel">
-                <h2>Kit : 75</h2>
-                <h2>Player Roll : </h2>
-                <h2>Average :</h2>
-                <h2>Height :</h2>
+                <div class="relative overflow-x-auto">
+                  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                      <thead class="text-xs text-gray-900 uppercase dark:text-black-400">
+                          <tr>
+                              <th scope="col" class="px-6 py-3">
+                                  Product name
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Color
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Category
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Price
+                              </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Apple MacBook Pro 17"
+                              </th>
+                              <td class="px-6 py-4">
+                                  Silver
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop
+                              </td>
+                              <td class="px-6 py-4">
+                                  $2999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Microsoft Surface Pro
+                              </th>
+                              <td class="px-6 py-4">
+                                  White
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop PC
+                              </td>
+                              <td class="px-6 py-4">
+                                  $1999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Magic Mouse 2
+                              </th>
+                              <td class="px-6 py-4">
+                                  Black
+                              </td>
+                              <td class="px-6 py-4">
+                                  Accessories
+                              </td>
+                              <td class="px-6 py-4">
+                                  $99
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
               </div>
             </div>
             <!--Service Area End-->
@@ -302,6 +483,14 @@
     </section>
     <!-- Footer section exit -->
 
+    
+
+
+
+
+
+
+    
     <!-- Js section  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
