--- a/index.html
+++ b/index.html
@@ -151,32 +151,217 @@
 <div class="mb-4 border-b border-gray-200 dark:border-gray-700">
   <ul class="flex flex-wrap -mb-px text-sm font-medium text-center" id="default-tab" data-tabs-toggle="#default-tab-content" role="tablist">
       <li class="me-2" role="presentation">
-          <button class="inline-block p-4 border-b-2 rounded-t-lg" id="profile-tab" data-tabs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Profile</button>
+          <button class="inline-block p-4 border-b-2 rounded-t-lg" id="profile-tab" data-tabs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Bpl</button>
       </li>
       <li class="me-2" role="presentation">
-          <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="dashboard-tab" data-tabs-target="#dashboard" type="button" role="tab" aria-controls="dashboard" aria-selected="false">Dashboard</button>
+          <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="dashboard-tab" data-tabs-target="#dashboard" type="button" role="tab" aria-controls="dashboard" aria-selected="false">Ipl</button>
       </li>
       <li class="me-2" role="presentation">
-          <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="settings-tab" data-tabs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">Settings</button>
+          <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="settings-tab" data-tabs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">Bigbash</button>
       </li>
-      <li role="presentation">
-          <button class="inline-block p-4 border-b-2 rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300" id="contacts-tab" data-tabs-target="#contacts" type="button" role="tab" aria-controls="contacts" aria-selected="false">Contacts</button>
-      </li>
+      
   </ul>
 </div>
 <div id="default-tab-content">
   <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-      <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Profile tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
+<div class="relative overflow-x-auto">
+                  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                      <thead class="text-xs text-gray-900 uppercase dark:text-black-400">
+                          <tr>
+                              <th scope="col" class="px-6 py-3">
+                                  Product name
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Color
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Category
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Price
+                              </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Apple MacBook Pro 17"
+                              </th>
+                              <td class="px-6 py-4">
+                                  Silver
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop
+                              </td>
+                              <td class="px-6 py-4">
+                                  $2999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Microsoft Surface Pro
+                              </th>
+                              <td class="px-6 py-4">
+                                  White
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop PC
+                              </td>
+                              <td class="px-6 py-4">
+                                  $1999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Magic Mouse 2
+                              </th>
+                              <td class="px-6 py-4">
+                                  Black
+                              </td>
+                              <td class="px-6 py-4">
+                                  Accessories
+                              </td>
+                              <td class="px-6 py-4">
+                                  $99
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
   </div>
   <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
-      <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Dashboard tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
+<div class="relative overflow-x-auto">
+                  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                      <thead class="text-xs text-gray-900 uppercase dark:text-black-400">
+                          <tr>
+                              <th scope="col" class="px-6 py-3">
+                                  Product name
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Color
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Category
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Price
+                              </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Apple MacBook Pro 17"
+                              </th>
+                              <td class="px-6 py-4">
+                                  Silver
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop
+                              </td>
+                              <td class="px-6 py-4">
+                                  $2999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Microsoft Surface Pro
+                              </th>
+                              <td class="px-6 py-4">
+                                  White
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop PC
+                              </td>
+                              <td class="px-6 py-4">
+                                  $1999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Magic Mouse 2
+                              </th>
+                              <td class="px-6 py-4">
+                                  Black
+                              </td>
+                              <td class="px-6 py-4">
+                                  Accessories
+                              </td>
+                              <td class="px-6 py-4">
+                                  $99
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
   </div>
   <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="settings" role="tabpanel" aria-labelledby="settings-tab">
-      <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Settings tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
+<div class="relative overflow-x-auto">
+                  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+                      <thead class="text-xs text-gray-900 uppercase dark:text-black-400">
+                          <tr>
+                              <th scope="col" class="px-6 py-3">
+                                  Product name
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Color
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Category
+                              </th>
+                              <th scope="col" class="px-6 py-3">
+                                  Price
+                              </th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Apple MacBook Pro 17"
+                              </th>
+                              <td class="px-6 py-4">
+                                  Silver
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop
+                              </td>
+                              <td class="px-6 py-4">
+                                  $2999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Microsoft Surface Pro
+                              </th>
+                              <td class="px-6 py-4">
+                                  White
+                              </td>
+                              <td class="px-6 py-4">
+                                  Laptop PC
+                              </td>
+                              <td class="px-6 py-4">
+                                  $1999
+                              </td>
+                          </tr>
+                          <tr class="bg-white dark:bg-gray-800">
+                              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-black">
+                                  Magic Mouse 2
+                              </th>
+                              <td class="px-6 py-4">
+                                  Black
+                              </td>
+                              <td class="px-6 py-4">
+                                  Accessories
+                              </td>
+                              <td class="px-6 py-4">
+                                  $99
+                              </td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
   </div>
-  <div class="hidden p-4 rounded-lg bg-gray-50 dark:bg-gray-800" id="contacts" role="tabpanel" aria-labelledby="contacts-tab">
-      <p class="text-sm text-gray-500 dark:text-gray-400">This is some placeholder content the <strong class="font-medium text-gray-800 dark:text-white">Contacts tab's associated content</strong>. Clicking another tab will toggle the visibility of this one for the next. The tab JavaScript swaps classes to control the content visibility and styling.</p>
-  </div>
+
 </div>
 
               </div>
